# Elm-interpreter

./: .gitignore  Cargo.toml  LICENSE.md  README.md  elm.ebnf  example.elm
benches/: my_bench.rs
benches/data/: tokenizer_2.elm  type_check.elm
resources/packed_modules/: README.md
resources/packed_modules/core/: Basics.json  Basics.pck  Bitwise.pck  Char.pck  (+12 more)
src/: ast.rs  constructors.rs  lib.rs  main.rs  test_utils.rs  tokenizer.rs  typed_ast.rs  types.rs  util.rs
src/analyzer/: definition_analyzer.rs  dependency_sorter.rs  env.rs  environment.rs  expression_analyzer.rs  expression_fold.rs  expression_helper.rs  function_analyzer.rs  import_analyzer.rs  import_helper.rs  inference.rs  inter_mod_analyzer.rs  mod.rs  module_analyser.rs  module_helper.rs  pattern_analyzer.rs  pattern_helper.rs  statement_analizer.rs  statement_helper.rs  static_env.rs  symbol_table.rs  type_analyzer.rs  type_helper.rs  type_inference.rs  type_resolution.rs
src/builtin/: basics.rs  bitwise.rs  char.rs  debug.rs  list.rs  mod.rs  string.rs  utils.rs
src/core/: basics.rs  bitwise.rs  char.rs  debug.rs  list.rs  mod.rs  operators.rs  string.rs  utils.rs
src/errors/: codes.rs  mod.rs
src/interpreter/: builtins.rs  closure_helper.rs  dynamic_env.rs  expression_eval.rs  expression_fold.rs  interop.rs  mod.rs  module_eval.rs  runtime_stack.rs  statement_eval.rs
src/loader/: mod.rs
src/parsers/: expression.rs  expression_parser.rs  input.rs  macros.rs  mod.rs  module.rs  module_parser.rs  parser.rs  pattern.rs  pattern_parser.rs  statement.rs  statement_parser.rs  types.rs  util.rs
src/rust_interop/: conversions.rs  function_call.rs  function_register.rs  functions.rs  mod.rs
src/source/: mod.rs
src/tokenizer/: input.rs  mod.rs  token_parser.rs  token_reader.rs
src/util/: expression_fold.rs  format.rs  mod.rs  name_sequence.rs  sort.rs  visitors.rs
(+17 files in other folders)
