[package]
name = "elm-interpreter"
version = "0.1.0"
authors = ["cout970 <thecout970@gmail.com>"]
description = "Small Elm interpreter"
license = "MIT"
license-file = "LICENSE.md"
repository = "https://github.com/cout970/Elm-interpreter"
exclude = [
    "target/*",
    "elm.ebnf",
    "example.elm",
]

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/main.rs"

[dependencies.nom]
version = "4.0.0"
features = ["verbose-errors"]

[dependencies]
pretty_assertions = "*"

[dev-dependencies]
criterion = "0.2.5"
[[bench]]
name = "my_bench"
harness = false