[package]
name = "elm-interpreter"
version = "0.1.0"
authors = ["cout970 <thecout970@gmail.com>"]
description = "Small Elm interpreter"
repository = "https://github.com/cout970/Elm-interpreter"
exclude = [
    "target/*",
    "elm.ebnf",
    "example.elm",
]
readme = "README.md"
keywords = ["elm", "interpreter"]
categories = ["parser-implementations"]

[lib]
name = "elm_interpreter"
path = "src/lib.rs"

[[bin]]
name = "repl"
path = "src/main.rs"

[dependencies]
nom = { version = "4.0.0", features = ["verbose-errors"] }
serde = { version = "1.0.90", features = ["derive", "rc"] }
hashbrown = { version = "0.3", features = ["serde"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "*"
criterion = "0.2.5"

[[bench]]
name = "my_bench"
harness = false